--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ body {
     background-color: #F3B507;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 /*Cabelhaço*/
 header.cabecalho {
     width: 360px;
-    height: 640px;
+    height: 200px;
     text-align: center;
     font-size: 16px;
     margin-top: 12px;
@@ -57,5 +58,35 @@ div.cadastro {
 }
 
 div.cadastro p {
+    padding: 10px;
+}
+
+main p {
+    font-size: 26px;
+    color: #FAF2E1;
+    padding: 10px;
+
+}
+
+main img {
+    margin-left: 30px;
+}
+
+div.rodape {
+    width: 222px;
+    height: 55px;
+    left: 69px;
+    top: 560px;
+    background: #737373;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+}
+div.rodape p {
+    font-size: 22px;
+    color: white;
+    text-align: center;
     padding: 10px;
 }
