--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     font-family: var(--fonte);
     background-color: var(--fundo);
 }
-
+/*############################Login########################*/
 .imagem {
     padding: 10px;
 }
@@ -65,6 +65,7 @@ header {
     border-radius: 5px;
     padding: 3px;
     font-size: 15px;
+    margin-bottom: 10px;
 }
 
 .container-senha {
@@ -99,14 +100,17 @@ header {
     background-position-x: 97%;
 }
 
-h2 {
+.esqsenha {
     color: var(--atention);
     font-size: 15px;
     margin-left: 30px;
     margin-top: 10px;
     margin-bottom: 40px;
 }
-
+h2 a {
+    text-decoration: none;
+    color: var(--atention);
+}
 #botao {
     text-align: center;
 }
@@ -231,4 +235,38 @@ footer {
 footer a {
     text-decoration: none;
     color: var(--atention);
+}
+/*############################Cadastro########################*/
+.seta {
+    padding: 10px;
+}
+.titulo {
+    font-size: 25px;
+}
+.ContinuarEmail {
+    width: 284px;
+    height: 31px;
+    padding: 5px;
+    margin-right: 15px;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    background: #FFFFFF;
+    border-radius: 5px;
+}
+.possuilogin {
+    color: white;
+    text-align: center;
+    font-size: 10px;
+    margin-bottom: 50px;
+}
+.possuilogin a {
+    text-decoration: none;
+    color: var(--atention);
+    
+}
+/*##################Recuperar senha####################*/
+.recuperar {
+    font-size: 25px;
+    color: white;
 }
