--- a/opcao.css
+++ b/opcao.css
@@ -1,19 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
+
 body{
     background-color: #0A0A0A;
     font-family: 'Raleway', sans-serif;
+    
 }
 .seta{
     margin-left: 10px;
     margin-top: 10px;
 }
 h1{
+    
     position: absolute;
     width: 315px;
     height: 95px;
     left: 40px;
     top: 74px;
-    margin-top: 25%;
+    margin-top: 0 auto;
 
     font-family: 'Raleway';
     font-style: normal;
@@ -23,20 +26,27 @@ h1{
     color: #FFFFFF;
 }
 main{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     
+    
+
     margin-left: 30px;
     margin-right: 30px;
-    margin-top: 80%;
+    margin-top: 50%;
+    
     text-align: center;
     color: #FFFFFF;
 
 }
 
-.dar{
+.carona{
     border: 1px solid #4A4A4A;;
     padding: 10px;
     border-radius: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 100;
@@ -48,6 +58,7 @@ main{
     border: 1px solid #4A4A4A;;
     border-radius: 5px;
     padding: 10px;
+    
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 100;
