--- a/style.css
+++ b/style.css
@@ -388,18 +388,12 @@ input.email.formu {
     margin-top: 75px;
 
 }
-.Botao {
-    
-    width: 290px;
-    height: 35px;
-    padding: 3px;
-    margin-right: 15px;
-    font-size: 15px;
-    background: #FFFFFF;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-bottom: -25px;
-    
+#procurarpassageiro {
+    margin-bottom: 1px;
+
+}
+#procurarpassageiro2 {
+    margin-top: 4px;
 
 }
 .outro_p{
@@ -407,6 +401,7 @@ input.email.formu {
     color: var(--titulo);
 }
 .passageiro{
+    margin-left: 30px;
     margin-block-start: 330px;
     padding: 5px;
     
