--- a/style.css
+++ b/style.css
@@ -391,6 +391,7 @@ input.email.formu {
 }
 #procurarpassageiro {
     margin-bottom: 1px;
+    margin-right: 0px;
 
 }
 #procurarpassageiro2 {
@@ -412,9 +413,42 @@ input.email.formu {
 h5{
     color: var(--titulo);
     align-items:baseline;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-size: 15px;
 }
 .corpo{
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+#sobre_vc{
+    background-color:#0A0A0A;
+    border: 1px solid #4A4A4A;
+    border-radius: 5px;
+    font-size: 15px;
+    margin-bottom: 15px;
+    padding: 3px;
+    line-height: 20px;
+    width: 275px;
+    color: var(--titulo);
+
+}
+
+.espaco{
+    margin-top: 100px;
+}
+
+#tituloP{
+    padding: 5px; 
+    text-align: center;
+    border: none;
+    background-color:#0A0A0A;
+    border-bottom: 2px solid #F3B507;
+    font-size: 30px;
+    width: 224px;
+    color: var(--titulo);
+    box-shadow: 0 0 0 0;
+    outline: 0;
+
 }
