--- a/style.css
+++ b/style.css
@@ -389,12 +389,18 @@ input.email.formu {
     margin-top: 75px;
 
 }
-#procurarpassageiro {
-    margin-bottom: 1px;
-
-}
-#procurarpassageiro2 {
-    margin-top: 4px;
+.Botao {
+    
+    width: 290px;
+    height: 35px;
+    padding: 3px;
+    margin-right: 15px;
+    font-size: 15px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: -25px;
+    
 
 }
 .outro_p{
@@ -402,7 +408,6 @@ input.email.formu {
     color: var(--titulo);
 }
 .passageiro{
-    margin-left: 30px;
     margin-block-start: 330px;
     padding: 5px;
     
