--- a/style.css
+++ b/style.css
@@ -271,8 +271,8 @@ footer a {
 }
 
 /*###################Dar carona########################*/
-form {
-    margin-top: 50px;
+form input {
+    color: white;
 }
 form label {
     font-size: 15px;
@@ -342,13 +342,14 @@ input.email.formu {
 }
 
 .ok {
-    margin-left: 122px;
+    margin-left: 130px;
     color: var(--atention);
 }
 
-#procurarpasseiro {
+#procurarpassageiro {
     margin-top: 20px;
-    margin-left: 30px
+    margin-left: 30px;
+    margin-right: 30px;
     
 }
 
@@ -389,6 +390,16 @@ input.email.formu {
     margin-top: 75px;
 
 }
+.caixaNome {
+    color: white;
+    padding: 5px;
+    font-size: 16px;
+}
+.sobrepass {
+    color: #F3B507;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
 .Botao {
     
     width: 290px;
@@ -406,6 +417,15 @@ input.email.formu {
 .outro_p{
     background-color:#FF0000;
     color: var(--titulo);
+    margin-left: 20px;
+    height: 35px;
+    width: 290px;
+    border: none;
+}
+#btn-darCarona {
+    margin-bottom: 8px;
+    margin-left: 20px;
+    border: none;
 }
 .passageiro{
     margin-block-start: 330px;
@@ -436,6 +456,7 @@ h5{
     line-height: 20px;
     width: 275px;
     color: var(--titulo);
+    padding: 8px;
 
 }
 
@@ -487,7 +508,6 @@ h5{
     content: "\00a0";
     display: inline-block;
     height: 16px;
-    margin: 0 0.25em 0 0;
     padding: 1px;;
     width: 16px;
     border-radius:5px;
@@ -497,4 +517,16 @@ h5{
 .radio input[type="radio"]:checked + label:before{
     background: #F3B507;
     content: "\2713"; 
+}
+
+/*##################mapa###########*/
+
+#cancelarCarona {
+    margin-top: 30px;
+    margin-left: 40px;
+    background-color: red;
+    color: white;
+    border: none;
+    font-size: 16px;
+    font-weight: 500;
 }
