--- a/style.css
+++ b/style.css
@@ -1,535 +1,224 @@
-@charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
-
-:root {
-    --fundo: #0A0A0A;
-    --titulo: #ffffff;
-    --text: #BCBCBC;
-    --atention: #F3B507;
+@import url("./CSS/oferecer.css");
+@import url("./CSS/suasviagens.css");
+@import url("./CSS/mensagens.css");
+@import url("./CSS/perfil.css");
+@import url("./CSS/perfil-opcoes.css");
+@import url("./CSS/perfil_conta.css");
 
 
-    --fonte: 'Raleway', cursive;
+:root{
+    --preto-principal:#0A0A0A;
+    --branco-principal: #ffffff;
+    --branco-simples:#a4a4a4;
+    --cor-principal:#F3B507;
+    --cor-borda-simples:#4A4A4A;
+    --cor-sombra-botao: inset -2px -2px 5px rgba(0, 0, 0, 0.25);
+    --cor-caixa-principal:linear-gradient(178.28deg, #282828 41.1%, rgba(25, 25, 25, 0.621461) 68.47%, rgba(0, 0, 0, 0) 98.54%);
+    --cor-sombra-caixa-principal:inset 2px 2px 10px #F3B507, inset -2px -2px 10px #F3B507;
 }
 
-* {
-    padding: 0;
-    margin: 0;
-}
 
-body {
+html{
+    box-sizing: border-box;
+}
+body{
     position: relative;
-    width: 360px;
-    height: 640px;
-    font-family: var(--fonte);
-    background-color: var(--fundo);
-    margin: 0 auto;
+    background: var(--preto-principal);
+    font-family: 'Roboto', sans-serif;
+    width: 375px;
+    height: 670px;
+    max-width: 100%;
+    max-height: 100%;
+    margin:0 auto;
+    color: #ffffff;
+    box-sizing: border-box;
+    /* border: 1px solid #4A4A4A; */
 }
+/* -- Tela de Procurar -- */
 
-input.cor {
-    color: white;
+header{
+
 }
-
-/*############################Login########################*/
-.imagem {
-    padding: 10px;
+.box__header{
+    width: 375px;
+    position: fixed;
 }
-
-header {
-    color: var(--titulo);
+.boxbox__header{
+    background: var(--cor-caixa-principal);
+    box-shadow: var(--cor-sombra-caixa-principal);
+    border-radius:  0  0 25px 25px;
+    box-sizing: border-box;
+    padding: 1.5rem 2rem;
     margin: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-size: 20px;
-    line-height: 34px;
-    padding-left: 30px;
-
-}
-
-.container-email {
-    color: var(--text);
-
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
-    line-height: 34px;
-
-    color: var(--text);
-    padding-left: 30px;
-    margin-top: 100px;
-
-
-}
-
-.email {
-    width: 275px;
-    height: 31px;
-    margin-left: 30px;
-    margin-top: 5px;
-    background: #0A0A0A;
-    border: 1px solid #4A4A4A;
-    border-radius: 5px;
-    padding: 3px;
-    font-size: 15px;
-    margin-bottom: 10px;
-}
-
-.container-senha {
-    width: 99px;
-    height: 38px;
-    font-weight: 600;
-    line-height: 34px;
-    padding-left: 30px;
-    margin-top: 20px;
-
-
-    font-size: 25px;
-
-    color: var(--text)
-}
-
-.senha {
-    width: 275px;
-    height: 31px;
-    left: 40px;
-    top: 228px;
-
-    background: #0A0A0A;
-    border: 1px solid #4A4A4A;
-    border-radius: 5px;
-    margin-left: 30px;
-    padding: 3px;
-    font-size: 15px;
-    background-image: url(imagens/olhinho.png) !important;
-    background: no-repeat;
-    background-position-y: center;
-    background-position-x: 97%;
-}
-
-.esqsenha {
-    color: var(--atention);
-    font-size: 15px;
-    margin-left: 30px;
-    margin-top: 10px;
-    margin-bottom: 40px;
-}
-
-h2 a {
-    text-decoration: none;
-    color: var(--atention);
-}
-
-#botao {
-    text-align: center;
-}
-
-.BotaoEntrar {
-    width: 285px;
-    height: 31px;
-    padding: 3px;
-    margin-right: 15px;
-    font-size: 15px;
-    margin-bottom: 30px;
-    background: #FFFFFF;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#linha {
-    display: flex;
-    flex-flow: row wrap;
-    margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-areas:
+    "perfil texto icone"
+    ;
     align-items: center;
+    gap: 1.5rem;
 }
-
-.sim {
-    width: 119px;
-    height: 0px;
-    left: 40px;
-    top: 404px;
-    margin-left: 30px;
-    border: 1px solid #F3B507;
+.secao__header-img{
+    grid-area: perfil;
 }
-
-.ou {
-    width: 33px;
-    height: 24px;
-    left: 167px;
-    top: 392px;
-    padding-left: 8px;
-    font-size: 15px;
-    line-height: 18px;
-
-    color: #BCBCBC;
-
+.secao__header-texto{
+    color: var(--branco-principal);
+    grid-area: texto;
+    
 }
-
-.nao {
-    width: 119px;
-    height: 0px;
-    left: 195px;
-    top: 404px;
-    margin-right: 30px;
-    border: 1px solid #F3B507;
-
+.secao__header-icone{
+    grid-area: icone;
+}	
+.secao__header-texto2{
+    font-weight: 600;
+    font-size: 18px;
 }
-
-#apple {
-    text-align: center;
-}
-
-.configbutton {
-    color: white;
-    width: 280px;
-    height: 31px;
-    padding: 3px;
-    margin-right: 15px;
-    font-size: 15px;
-    margin-bottom: 8px;
-    border: 1px solid #4A4A4A;
-    border-radius: 5px;
-    background-color: #4A4A4A;
-    background-image: url(imagens/apple.png) !important;
-    background: no-repeat;
-    background-position-y: center;
-    background-position-x: 3%;
-}
-
-#google {
-    text-align: center;
-}
-
-#txtgoogle {
-    background-image: url(imagens/google.png) !important;
-}
-
-#conta {
-    text-align: center;
-
-}
-
-.EntrarNewConta {
-    color: white;
-    width: 280px;
-    height: 31px;
-    padding: 3px;
-    margin-right: 15px;
-    font-size: 15px;
-    margin-bottom: 30px;
-    border: 1px solid #4A4A4A;
-    border-radius: 5px;
-    background-color: #0A0A0A;
-}
-
-footer {
-    text-align: center;
-    font-size: 10px;
-    line-height: 12px;
-    color: white;
-    padding: 30px;
-}
-
-footer a {
-    text-decoration: none;
-    color: var(--atention);
-}
-
-/*############################Cadastro########################*/
-.seta {
-    padding: 10px;
-}
-
-.titulo {
-    font-size: 25px;
-    margin-bottom: 50px;
-}
-
-.possuilogin {
-    color: white;
-    text-align: center;
-    font-size: 10px;
-    margin-bottom: 50px;
-}
-
-.possuilogin a {
-    text-decoration: none;
-    color: var(--atention);
-
-}
-
-/*##################Recuperar senha####################*/
-.recuperar {
-    font-size: 25px;
-    color: white;
-}
-
-.selecion:hover {
-    background-color: var(--atention);
-    color: #0A0A0A;
-    transition: 0.5s;
-    cursor: pointer;
-}
-
-/*###################Dar carona########################*/
-form input {
-    color: white;
-}
-form label {
-    font-size: 15px;
-    color: #BCBCBC;
-}
-.form {
-    padding: 8px;
-    margin: 0 auto;
-    margin-top: 10px;
-    width: 300px;
-
-    /* Para ver as bordas do formulário */
-    border-radius: 1em;
-    font-size: 16px
-}
-
-.form input {
-    margin-top: 7px;
-    color: white;
-}
-
-input.email.formu {
-    margin-left: 0px;
-}
-
-.teste {
-    display: flex;
-    flex-flow: row wrap;
-}
-
-#date {
-    display: flex;
-    width: 75px;
-    height: 25px;
-    margin-left: 30px;
-    background-color: #0A0A0A;
-    border: 1px solid #4A4A4A;
-    border-radius: 5px;
-    padding: 3px;
-    color: #BCBCBC;
-}
-
-.quit {
-    margin-left: 30px;
-}
-
-.apenas {
-    margin-left: 63px;
-
-}
-#escolha {
-    display: flex;
-    width: 122px;
-    height: 25px;
-    margin-left: 70px;
-    padding: 3px;
-}
-.transporte {
-    margin-left: 30px;
-}
-.teste .two {
-    margin-top: 20px;
-}
-.dados {
-    color: var(--atention);
-    margin-left: 30px;
+.secao__header-texto3{
+    margin-top: .5rem;
+    font-weight: 300;
     font-size: 16px;
 }
-
-.ok {
-    margin-left: 10px;
-    color: var(--atention);
+.notificacao__img{
 }
 
-#procurarpassageiro {
-    margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
     
-}
 
-/*#####################Escolha###############*/
-.main {
+
+
+.box-corpo{
     display: flex;
-    justify-content: space-between;
-}
-.container-2 {
-    margin-top: 10px;
-    margin-right: 10px;
-}
-.estiloh1 {
-    color: white;
-    text-align: center;
-    margin-top: 30%;
-}
-.button1 {
-    margin-left: 40px;
-    margin-top: 40px;
-    margin-bottom: 10px;
-    align-items: center;
-    cursor: pointer;
-}
-
-.button2 {
-    margin-left: 40px;
-    cursor: pointer;
-}
-
-.logo-quer-carona {
-    margin: auto;
-}
-/*##################### Perfil Passageiro ###############*/
-.icon{
-    display: flex;
-    justify-content: center;
-    margin-top: 75px;
-
-}
-.caixaNome {
-    color: white;
-    padding: 5px;
-    font-size: 16px;
-}
-.sobrepass {
-    color: #F3B507;
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-.Botao {
-    
-    width: 290px;
-    height: 35px;
-    padding: 3px;
-    margin-right: 15px;
-    font-size: 15px;
-    background: #FFFFFF;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-bottom: -25px;
-    
-
-}
-.outro_p{
-    background-color: yellow;
-    color: black;
-    margin-left: 20px;
-    font-weight: bolder;
-    height: 35px;
-    width: 290px;
-    border: none;
-}
-#btn-darCarona {
-    margin-bottom: 8px;
-    margin-left: 20px;
-    border: none;
-}
-.passageiro{
-    margin-block-start: 330px;
-    padding: 5px;
-    
-}
-/*##################### Perfil sobre voce ###############*/
-
-h5{
-    color: var(--titulo);
-    align-items:baseline;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    font-size: 15px;
-}
-.corpo{
-    display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90%;
+   
 }
-#sobre_vc{
-    background-color:#0A0A0A;
-    border: 1px solid #4A4A4A;
-    border-radius: 5px;
-    font-size: 15px;
-    margin-bottom: 15px;
-    padding: 3px;
-    line-height: 20px;
-    width: 275px;
-    color: var(--titulo);
-    padding: 8px;
-
-}
-
-.espaco{
-    margin-top: 100px;
-}
-
-#tituloP{
-    padding: 5px; 
+.box-corpo2{
     text-align: center;
-    border: none;
-    background-color:#0A0A0A;
-    border-bottom: 2px solid #F3B507;
-    font-size: 30px;
-    width: 224px;
-    color: var(--titulo);
-    box-shadow: 0 0 0 0;
-    outline: 0;
-
+    /* display: flex; */ 
+}
+.endereco__procura{
+    /* width: 50%; */
+    background-color: var(--preto-principal);
+    border-bottom: solid 1px var(--cor-borda-simples);
+    padding: .3rem 2rem;
+    margin: 1rem;
 }
 
-
-.fonte{
-    color: var(--titulo);
+.endereco__procura::placeholder{
+    text-align: center;
+    color: var(--branco-principal);
+    font-weight: 400;
+    font-size: 16px;
+    
     
 }
-
-.raio{
-
-    margin-left: 50px;
-    margin-right: 40px;
+.box-corpo4{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
-.radio input[type=radio], input[type=checkbox]{
-    display:none; /* Esconde os inputs */
+input{
+    color: var(--branco-principal);
+}
+input[type="date"]{
+    background-color: var(--preto-principal);
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    color: var(--branco-principal);
+    font-weight: 400;
+    font-size: 16px;
+}
+::-webkit-calendar-picker-indicator{
+    cursor: pointer;
+    background-color: var(--branco-principal);
+}
+
+select[name="select"]{
+    background-color: var(--preto-principal);
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    color: var(--branco-principal);
+    font-weight: 400;
+    font-size: 16px;
     
+}
+.box__corpo4--img{
+    margin-right: .4rem;
+    border-left: solid 1px var(--cor-borda-simples);
+    padding-left: 1rem;
+    margin-left: 1rem;
 
 }
 
-.radio label {
+.botao__procurar{
+    margin: 2rem 0;
+}
+.botao__procurar--interno{
+    padding: .5rem 6rem;
+    box-shadow: var(--cor-sombra-botao);
+    color: var(--preto-principal);
+    background-color: var(--cor-principal);
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 18px;
     cursor: pointer;
     
-
-
 }
-.radio input[type="radio"] + label:before, input[type="checkbox"] {
 
-    border: 1px solid #5D5C5C;
-    background-color: white;
-    content: "\00a0";
-    display: inline-block;
-    height: 16px;
-    padding: 1px;;
-    width: 16px;
-    border-radius:5px;
+.box__rodape{
+    box-sizing: border-box;
+    position: fixed;
+    width: 375px;
 
 }
 
-.radio input[type="radio"]:checked + label:before{
-    background: #F3B507;
-    content: "\2713"; 
+
+.rodape__lista{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background: var(--cor-caixa-principal);
+    box-shadow: var(--cor-sombra-caixa-principal);
+    border-radius: 25px 25px 0 0;
+    padding: 1rem;
+    box-sizing: border-box;
+
+}
+.rodape__lista--item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-sizing: border-box;
+
+}
+.rodape__lista--link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: .3rem;
+    box-sizing: border-box;
+
+    
+
+}
+.rodape__lista-texto{
+    font-weight: 300;
+    font-size: 10px;
+    padding-top: .3rem;
+    color: var(--cor-borda-simples);
+    box-sizing: border-box;
 }
 
-/*##################mapa###########*/
-
-#cancelarCarona {
-    margin-top: 30px;
-    margin-left: 40px;
-    background-color: red;
-    color: white;
-    border: none;
-    font-size: 16px;
-    font-weight: 500;
+.rodape__lista-texto-ativo{
+    color: var(--cor-principal);
+    font-size: 12px;
+    box-sizing: border-box;
 }
+
+
