--- a/CSS/login/telaInicio.css
+++ b/CSS/login/telaInicio.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 3rem;
+    margin: 2rem;
 }
 
 .container{
@@ -32,23 +32,31 @@
     font-weight: 600;
     font-size: 18px;
     cursor: pointer;
-    transition: filter 300ms ease-in-out;
     
 }
 .botao-cadastre:hover{
-    background: #edd99d;
-    filter: brightness(80%);
+    background: var(--branco-principal);
+    color: var(--preto-principal);
+    transition: .2s;
 }
+.botao-login:hover{
+    background: var(--cor-principal);
+    color: var(--preto-principal);
+    box-shadow: var(--cor-sombra-botao);
+    transition: .2s;
 
+
+}
 .botao-login{
     padding: .3rem 5rem;
     color: var(--branco-principal);
     background: var(--preto-principal);
     border-radius: 5px;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 18px;
     cursor: pointer;
     border: 1px solid var(--branco-simples);
+    margin-bottom: 2rem;
 
 }
 
@@ -95,7 +103,9 @@
 #apple {
     text-align: center;
 }
-
+.apple:hover{
+    border: 1px solid var(--cor-principal);
+}
 .configbutton {
     color: white;
     width: 280px;
@@ -146,4 +156,7 @@
     color: var(--cor-principal);
     cursor: pointer;
 
+}
+.footer-link:hover{
+    color: var(--branco-principal);
 }
