--- a/CSS/login/criarConta.css
+++ b/CSS/login/criarConta.css
@@ -30,6 +30,12 @@
     font-family: 'Roboto', sans-serif;
     margin-top: .6rem; 
 }
+
+.email-criar:focus-within{
+    border: 1px solid var(--cor-principal);
+    outline: none;
+}
+
 .email-criar--conta{
     
     text-align: center;
