--- a/public/assets/css/cadastroNome.css
+++ b/public/assets/css/cadastroNome.css
@@ -15,9 +15,9 @@
     background: #0A0A0A;
     border: 1px solid var(--branco-simples);
     border-radius: 5px;
-    padding: .4rem 0;
-    width: 75%;
-    padding-left: .3rem;
+    padding: .4rem 3rem;
+    
+    padding-left: 1rem;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     margin-top: .6rem; 
@@ -29,32 +29,20 @@
 }
 
 
-.error-message1{
+.nameError{
     font-size: 11px;
     padding: .2rem 0;
     color: var(--cor-error);
     font-style: italic;
     display: none;
 }
-.show-error-message1 .error-message1{
+.show-error-message1 .nameError{
     display: block;
 }
-.formNome .show-error-message1 input[type] {
+input.invalid {
     border-color: var(--cor-error);
 }
 
-.botao-continuar{
-    padding: .3rem 3rem;
-    margin-top: 1rem;
-    box-shadow: var(--cor-sombra-botao);
-    color: var(--preto-principal);
-    background-color: var(--branco-principal);
-    border-radius: 8px;
-    font-weight: 500;
-    font-size: 16px;
-    cursor: pointer;
-    font-family: 'Roboto', sans-serif;
-}
 .botao-continuar:hover{
     background: var(--cor-principal);
     color: var(--preto-principal);
