--- a/public/assets/css/criarConta.css
+++ b/public/assets/css/criarConta.css
@@ -25,7 +25,7 @@
     border-radius: 5px;
     padding: .4rem 0;
     width: 90%;
-    padding-left: .3rem;
+    padding-left: .4rem;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     margin-top: .6rem; 
@@ -60,6 +60,7 @@
     color: var(--preto-principal);
     background-color: var(--branco-principal);
     border-radius: 8px;
+    border: none;
     font-weight: 500;
     font-size: 16px;
     cursor: pointer;
