--- a/public/assets/css/criandoSenha.css
+++ b/public/assets/css/criandoSenha.css
@@ -11,3 +11,27 @@
     margin-bottom: -.5rem;
 }
 
+.error-message1{
+    font-size: 11px;
+    padding: .2rem 0;
+    color: var(--cor-error);
+    font-style: italic;
+    display: none;
+}
+.show-error-message1 .error-message1{
+    display: block;
+}
+.formNome .show-error-message1 input[type] {
+    border-color: var(--cor-error);
+}
+.Psenha, .Psenha2{
+    background: #0A0A0A;
+    border: 1px solid var(--branco-simples);
+    border-radius: 5px;
+    padding: .4rem 0;
+    width: 90%;
+    padding-left: .4rem;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    margin-top: .6rem; 
+}
