--- a/public/assets/css/perfil_conta.css
+++ b/public/assets/css/perfil_conta.css
@@ -23,10 +23,15 @@
 .btn__sair--conta{
     border: solid 1px var(--cor-principal);
     color: var(--cor-principal);
-    font-weight: 500;
-    font-size: 14px;
+    font-weight: 600;
+    font-size: 16px;
     padding: .5rem 0;
     margin: .5rem 0;
     border-radius: 25px;
     width: 60%;
+}
+.btn__sair--conta:hover{
+    cursor: pointer;
+    background: var(--cor-principal);
+    color: var(--preto-principal);
 }
